terraform/sg.tf
resource "aws_security_group" "ecs_sg" {
  name = "ecs-sg"
  vpc_id = aws_vpc.main.id

    ingress {
    from_port=3000
    to_port=3000
    protocol="tcp"
    cidr_blocks=["0.0.0.0/0"]
  }
    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
    tags = {
    Name = "ecs-sg"
  }
}
resource "aws_security_group" "alb_sg" {
  name = "alb-sg"
  vpc_id = aws_vpc.main.id

    ingress {
    from_port=80
    to_port=80
    protocol="tcp"
    cidr_blocks=["0.0.0.0/0"]
  }
    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
    tags = {
    Name = "alb-sg"
  }
}
